Revert "fix: replace List.getFirst() with List.get(0) for Java 17 compatibility"
This reverts commit 11789b248df50e53ac78f93d312f75391d076d64.